# AzuraLang

./: README.md  index.html  pyproject.toml
example-scripts/: example1.py
html/: index.html
scr/: __init__.py  app.py
scr/AzuraLang/: example.py
